close #30 Prevent maven resource filtering for fonts